--- a/src/styles/material-icons.css
+++ b/src/styles/material-icons.css
@@ -7,7 +7,7 @@
   font-family: "Material Icons";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/material-icons-regular.ttf") format("truetype");
+  src: url("../fonts/material-icons.ttf") format("truetype");
 }
 
 .material-icons {
