Updated Stylelint to work with SASS

--- a/src/components/HelloWorld/index.module.scss
+++ b/src/components/HelloWorld/index.module.scss
@@ -1,6 +1,3 @@
-$primary-color: #24a0ed;
-
 .info {
-  font-size: 0.875rem; /* 14px */
-  color: $primary-color;
+  font-size: 0.875rem /* 14px */
 }
