Refactored SASS files

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,5 +1,6 @@
 /**
- * A simple CSS reset
+ * A simple set of CSS rules that resets the styling
+ * of all HTML elements to a consistent baseline.
  */
 *,
 *::before,
